<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dockRadiusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dock_radius_property"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/dockRadiusSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/dockRadiusMinTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockRadiusValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockRadiusMaxTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dockHeightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dock_height_property"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/dockHeightSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/dockHeightMinTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockHeightValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockHeightMaxTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dockSideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dock_side_margin_property"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/dockSideSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/dockSideMinTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockSideValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockSideMaxTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dockBottomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dock_bottom_margin_property"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/dockBottomSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/dockBottomMinTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockBottomValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dockBottomMaxTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/highLevelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high_level_animation"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/highLevelSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showText="false"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/dock_save" />

    </LinearLayout>
</LinearLayout>